--- a/codigo.html
+++ b/codigo.html
@@ -17,5 +17,13 @@
         <li>lista6</li>
         <li>lista7</li>
     </ul>
+    <div>
+        <h2>
+            outra coisa
+        </h2>
+    </div>
+    <section>
+        section do eduardo
+    </section>
 </body>
 </html>
